--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Google Font -->
       <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <!-- External CSS -->
-      <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Arvo'><link rel="stylesheet" href="./style.css">
+      <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Arvo'><link rel="stylesheet" href="CSS/style.css">
 
   </head>
   <body>
