Added Favicon logo.....

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>404 – Page Not Found</title>
     <!-- Google Font -->
       <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="Images/Favicon.png">
     <!-- External CSS -->
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Arvo'><link rel="stylesheet" href="CSS/style.css">
 
